fixed spacing under lead title

--- a/css/creative.css
+++ b/css/creative.css
@@ -335,6 +335,7 @@ img::-moz-selection {
   font-size: 2rem;
   font-weight: 600;
   text-align: center;
+  margin-bottom: 20px;
 }
 @media (max-width: 900px) {
   #lead-magnet .col-sm-7 h1 {
