--- a/scss/_lead-magnet.scss
+++ b/scss/_lead-magnet.scss
@@ -16,6 +16,7 @@
       font-size: 2rem;
       font-weight: 600;
       text-align: center;
+      margin-bottom: 20px;
       @media (max-width: 900px) {
         font-size: 1.7rem;
       }
